# NeonProgramming

./: CMakeLists.txt  README.md  benchmark.sh
absDifference/: CMakeLists.txt  main.cpp
accPairWise/: CMakeLists.txt  main.cpp
addition/: CMakeLists.txt  main.cpp
cachePerformance/: CMakeLists.txt  main.cpp
cachePerformanceVec/: CMakeLists.txt  main.cpp
comparisons/: CMakeLists.txt  main.cpp
conversions/: CMakeLists.txt  main.cpp
convolution/: CMakeLists.txt  convolution.cpp
count/: CMakeLists.txt  count.cpp
deinterleaving/: CMakeLists.txt  deinterleave_chatGPT.cpp  deinterleaving.cpp  main.cpp
downsampling/: CMakeLists.txt  main.cpp
gbenchmarkBuild/: CMakeCache.txt  CTestTestfile.cmake  Makefile  benchmark.pc  benchmarkConfigVersion.cmake  benchmarkTargets.cmake  cmake_install.cmake
gbenchmarkBuild/src/: Makefile  cmake_install.cmake
gbenchmarkBuild/test/: CTestTestfile.cmake  Makefile  args_product_test  basic_test  benchmark_gtest  benchmark_min_time_flag_iters_test  benchmark_min_time_flag_time_test  benchmark_name_gtest  benchmark_random_interleaving_gtest  benchmark_setup_teardown_test  benchmark_test  cmake_install.cmake  complexity_test  (+30 more)
include/: logger.hpp
loadStore/: CMakeLists.txt  main.cpp
minmax/: CMakeLists.txt  main.cpp
multiplication/: CMakeLists.txt  main.cpp
neonBenchmarked/: CMakeLists.txt  Readme.md  main.cpp
rampup/: CMakeLists.txt  main.cpp
shift/: CMakeLists.txt  main.cpp
squareRoot/: CMakeLists.txt  main.cpp
substraction/: CMakeLists.txt  main.cpp
vecMulAccScalar/: CMakeLists.txt  main.cpp
vectorManipulation/: CMakeLists.txt  main.cpp
vectorSum/: CMakeLists.txt  vectorSum.cpp
