cmake_minimum_required(VERSION 3.2)
project(neon_example_project)


add_subdirectory(convolution)
add_subdirectory(count)
add_subdirectory(vectorSum)
add_subdirectory(deinterleaving)
add_subdirectory(rampup)
add_subdirectory(accPairWise)
add_subdirectory(addition)
add_subdirectory(downsampling)
add_subdirectory(multiplication)
add_subdirectory(substraction)
add_subdirectory(minmax)
add_subdirectory(absDifference)
add_subdirectory(squareRoot)
add_subdirectory(comparisons)
add_subdirectory(shift)
add_subdirectory(conversions)
add_subdirectory(vecMulAccScalar)
add_subdirectory(vectorManipulation)
add_subdirectory(loadStore)
add_subdirectory(neonBenchmarked)